add banner section and css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <body>
     <div id="navbar-container"></div>
 
+    <main>
+      <div class="content">
+        <div class="banner-section" id="banner-section">
+          <h1>Kickstart Your Career in Tech</h1>
+          <p>Explore the best deals and products</p>
+          <a href="https://revou.co/" target="_blank" class="btn">Learn More</a>
+        </div>
+      </div>
+    </main>
     <script src="/js/script.js"></script>
   </body>
 </html>
