add headquarter section and css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,40 @@
           <p>Explore the best deals and products</p>
           <a href="https://revou.co/" target="_blank" class="btn">Learn More</a>
         </div>
+
+        <div class="headquarter-section">
+          <h1>Our Headquarter</h1>
+
+          <div class="hq-container">
+            <div class="hq-item">
+              <div class="hq-image">
+                <img
+                  src="https://storage.googleapis.com/flip-prod-mktg-strapi/media-library/Jakarta_Neighborhoods_911480ed0f/Jakarta_Neighborhoods_911480ed0f.jpg"
+                  alt="Jakarta"
+                />
+              </div>
+              <h3>Jakarta</h3>
+            </div>
+            <div class="hq-item">
+              <div class="hq-image">
+                <img
+                  src="https://asset.kompas.com/crops/_QBFvchNV7JtOIaVkEg0JFZfLJU=/0x0:1000x667/750x500/data/photo/2022/07/25/62dec6809a479.jpg"
+                  alt="Bandung"
+                />
+              </div>
+              <h3>Bandung</h3>
+            </div>
+            <div class="hq-item">
+              <div class="hq-image">
+                <img
+                  src="https://www.indonesia.travel/content/dam/indtravelrevamp/en/destinations/revision-2019/all-revision-destination/surabayathumb.jpg"
+                  alt="Surabaya"
+                />
+              </div>
+              <h3>Surabaya</h3>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="/js/script.js"></script>
