--- a/about-us.html
+++ b/about-us.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div id="navbar-container"></div>
+
     <script src="/js/script.js"></script>
   </body>
 </html>
