add content html

--- a/about-us.html
+++ b/about-us.html
@@ -7,8 +7,142 @@
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
     <div id="navbar-container"></div>
+
+    <main>
+      <div class="content">
+        <div class="revou-culture-section">
+          <div class="culture-content">
+            <h1>RevoU Culture</h1>
+            <div class="paragraph-wrapper">
+              <p>
+                When thinking about our distinctive Culture and how we operate
+                as an Organization, we asked ourselves two fundamental
+                questions:
+              </p>
+              <p>
+                1. What is uniquely particular about RevoU?
+                <br />
+                2. What is it that our employees experience here, that they
+                won't experience elsewhere?
+              </p>
+              <p>
+                In answering such questions, we first came up with a list of
+                industry standard values. Values that, despite being an integral
+                part of our culture, we share with many other employers in the
+                job market. Especially the ones we compete with to attract the
+                very best talent, that is other tech start ups.
+              </p>
+              <p>These are values such as:</p>
+              <ul>
+                <li>Collaboration &amp teamwork</li>
+                <li>Integrity</li>
+                <li>Customer centricity</li>
+              </ul>
+              <p>
+                For as much as we shouldn't take these for granted, we believe
+                that these are not what make us truly unique. Not what we fully
+                aspire to. Not the ones to keep ourselves accountable in our
+                day-to-day life at RevoU to pursue our vision to make RevoU the
+                most inspiring and career defining place to work in Southeast
+                Asia.
+              </p>
+              <p style="font-weight: bold">
+                So, what are the distinctive values that makes us uniquely
+                RevoU?
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="kindness-section">
+          <h1 style="text-align: center">
+            <span class="circled-number">1</span> Kindness
+          </h1>
+          <div class="tabs-menu">
+            <a href="">
+              <div class="square-icon" style="background-color: #ffde3d">
+                <img src="img/kindness1.png" alt="Kindness Image 1" />
+              </div>
+            </a>
+            <a href="">
+              <div class="square-icon">
+                <img src="img/kindness2.png" alt="Kindness Image 2" />
+              </div>
+            </a>
+            <a href="">
+              <div class="square-icon">
+                <img src="img/kindness3.png" alt="Kindness Image 3" />
+              </div>
+            </a>
+          </div>
+
+          <div class="paragraph-menu" id="paragraph-menu-1">
+            <p>
+              We always try to put ourselves in other people's shoes. Be it our
+              team member, our direct report or our manager.
+            </p>
+            <p>
+              We act with compassion and think about the consequences of our
+              behavior on the other person, regardless of the hierarchical
+              relationship.
+            </p>
+            <p>
+              We are empathetic with our colleagues but also, and especially
+              with our most important stakeholder: our students.
+            </p>
+            <p>
+              We understand how much anxiety comes with starting or changing a
+              career and in particular in looking for a new job. Whenever take
+              this for granted, and try to support our students as much as we
+              cannot only in equipping them with the most effective technical
+              skills but in providing them all the psychological support they
+              need.
+            </p>
+          </div>
+
+          <!-- <div class="paragraph-menu" id="paragraph-menu-2">
+            <p>
+              We treat people with the same respect regardless of their
+              seniority and role in the company. We are as kind with our older
+              teammates as we are with the new intern who just started last
+              Monday.
+            </p>
+            <p>
+              We respect each and every one of our students as if our overall
+              business depended on that very one student. No matter how many
+              thousands and millions of professional lives we are able to touch,
+              we never forget that behind such aggregate numbers are unique
+              people and life stories..
+            </p>
+          </div>
+
+          <div class="paragraph-menu" id="paragraph-menu-3">
+            <p>
+              Despite being extremely driven and ambitious about our own career,
+              we are leaving your ego at RevoU's entrance door.
+            </p>
+            <p>
+              We make time to help our colleagues, even if it doesn't directly
+              benefit us (or our team). We are lifting everyone around us as we
+              genuinely want them to succeed.
+            </p>
+            <p>
+              We believe that career progression at RevoU is not a zero-sum
+              game: helping each other will benefit everyone's career.
+            </p>
+            <p>
+              We are aware that our drive and selflessness put us at risk of
+              forgetting about our own well-being and we are not afraid to take
+              a step back when necessary, balancing the intensity of our
+              day-to-day work with periods of deserved rest.
+            </p>
+          </div> -->
+        </div>
+      </div>
+    </main>
 
     <script src="/js/script.js"></script>
   </body>
