add portfolio content on html

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,46 @@
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
     <div id="navbar-container"></div>
+
+    <div class="heroes-section">
+      <h1>
+        Portfolios of RevoU Alumni
+        <br />
+        Who Work at These Companies
+      </h1>
+    </div>
+    <div class="banner-slider">
+      <div class="slide">
+        <img src="img/banner-slider/gojek.png" alt="Banner 1" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/Grab.png" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/tiktok.png" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/traveloka.webp" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/lazada.png" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/ruangguru.png" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/shopee.png" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/vivo.png" alt="Banner 2" />
+      </div>
+      <div class="slide">
+        <img src="img/banner-slider/sicepat.png" alt="Banner 2" />
+      </div>
+    </div>
 
     <script src="/js/script.js"></script>
   </body>
